# maori_stock_bot

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml  system_prompt.md
.github/workflows/: deploy-dashboard.yml  deploy-site.yml  deploy.yml
admin/login/: index.html
app/: main.py
app/core/: config.py  database.py  scheduler.py
app/models/: dashboard_user.py  lead.py  outreach_contact.py  rebuild_job.py  scan_job.py
app/schemas/: lead.py  rebuild.py  scan.py
app/services/: analyzer.py  competitor_researcher.py  daily_report.py  gcp_deployer.py  github_client.py  maps.py  outreach_mailer.py  outreach_scheduler.py  playwright_inspector.py  rebuilder.py  scanner.py  site_generator.py  telegram.py  vercel_client.py
dashboard/: .env.local.example  middleware.ts  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx
dashboard/components/: BottomNav.tsx  ClientProvider.tsx  FixPromptModal.tsx  Sidebar.tsx  StatsCard.tsx
dashboard/lib/: api.ts  auth.ts
early-access/: index.html
frameworks/: business_plan.md  campaign_planning.md  competitive_analysis.md  marketing_brief.md
marketing_plans/: hipster_hippo_marketing_plan.md
membership/: index.html
nginx/: api.conf  dashboard.conf
scripts/: deploy-site.sh  setup-gcp.sh
shilat-pool/: next.config.ts  package-lock.json  package.json  proxy.ts
skills/: brand_strategy.md  business_planning.md  content_marketing.md  crm_and_funnels.md  digital_marketing.md  market_research.md  performance_marketing.md  social_media.md
(+273 files in other folders)
